--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,21 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@shadcn/ui": "^0.0.4",
+    "@headlessui/react": "^2.2.2",
     "@supabase/supabase-js": "^2.49.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "firebase": "^11.6.0",
-    "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "lucide-react": "^0.501.0",
+    "mongoose": "^8.13.2",
+    "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
