--- a/client/package.json
+++ b/client/package.json
@@ -4,38 +4,47 @@
   "main": "index.jsx",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@stripe/stripe-react-native": "^0.43.0",
     "axios": "^1.8.4",
     "expo": "~52.0.38",
-    "expo-auth-session": "^6.0.3",
+    "expo-auth-session": "~6.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-facebook": "^12.2.0",
     "expo-location": "~18.0.10",
     "expo-modules-core": "^2.2.3",
     "expo-random": "^14.0.1",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.5.0",
+    "firebase": "^11.6.0",
     "lucide-react-native": "^0.482.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.13.1",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "react-redux": "^9.2.0",
+    "undefined": "expo-auth-session/providers/facebook"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
