--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,7 @@
     "@babel/core": "^7.20.0",
     "babel-preset-expo": "^12.0.9",
     "metro-react-native-babel-preset": "^0.77.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.2.2"
   },
   "private": true
 }
